# near-zmq-indexer

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  test.yml
src/: configs.rs  main.rs  utils.rs
