[package]
name = "near-zmq"
version = "0.1.0"
authors = ["Volno Petr <petr@herewallet.app>"]
edition = "2021"
rust-version = "1.62.1"

[dependencies]
actix = "0.13.0"
anyhow = "1.0.51"
aws-config = "0.6.0"
aws-endpoint = "0.6.0"
aws-sdk-s3 = "0.6.0"
aws-smithy-http = "0.36.0"
clap = { version = "3.1.6", features = ["color", "derive", "env"] }
futures = "0.3.5"
http = "0.2"
humantime = "2.1.0"
itertools = "0.10.0"
openssl-probe = "0.1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.34"
tracing-subscriber = "0.2.4"
zmq = "0.9.2"
async_zmq = "0.2.0"

near-indexer = { git = "https://github.com/near/nearcore", rev = "267e36e39fb5bb29c1df23c73afbcaa750ce96b1" }
near-indexer-primitives = { git = "https://github.com/near/nearcore", rev = "267e36e39fb5bb29c1df23c73afbcaa750ce96b1" }
near-client = { git = "https://github.com/near/nearcore", rev = "267e36e39fb5bb29c1df23c73afbcaa750ce96b1" }
